ui spacing fix

--- a/public/styles/events.css
+++ b/public/styles/events.css
@@ -263,7 +263,7 @@
 }
 
 .row_padding {
-    padding-top: 60px;
+    padding-top: 6rem;
 }
 
 .valueDiv {
